# mbzirc_control

./: CMakeLists.txt  README.md  package.xml
controllers/: package.xml
controllers/msg/: PIDparam.msg
mbzirc_controllers/: CMakeLists.txt
mbzirc_controllers/msg/: directionalPIDparam.msg
mbzirc_controllers/scripts/: interceptor_controller.py  interceptor_tgt_simulator.py  target_position_publisher.py
mbzirc_controllers/src/: .CV_directional_PID.cpp.swp  CV_directional_PID.cpp  basic_PID.cpp  directional_PID.cpp  interceptor_controller.cpp  interceptor_tgt_simulator.cpp  lidar_reader.py
mbzirc_launch/: CMakeLists.txt  package.xml
mbzirc_launch/launch/: contr+tgt_pos_pub+vis+.launch  control+target_pos_publisher.launch  mavros+smach+PID+CV.launch  smach+PID+CV.launch  smach+PID.launch  smach+dirPID+tgtLocked.launch  smach+snake_interceptor_tgt_sim.launch
mbzirc_mission_management/: CMakeLists.txt  package.xml
mbzirc_mission_management/launch/: smach_PID.launch
mbzirc_mission_management/msg/: Task.msg
mbzirc_mission_management/scripts/: task_manager.py
mbzirc_mission_management/src/: RecognitionThread.py  VideoGet.py  VideoShow.py  checking_condition.cpp  contours_filter_library.py  fake_tgt_found.cpp  img_to_video.py  memory_class.py  position_memory_class.py  smach_sm.py  smach_sm2.py  thread_video_recorder.py  waypoint_mp2mavros.py  wp_file  wp_file2  wp_file3  wp_file5  wp_file_4
mbzirc_mission_management/src/config/: configuration.ini  configuration_copy.ini
mbzirc_nmpc/: TODO_LIST.txt
mbzirc_nmpc/mav_control_interface/: CMakeLists.txt
mbzirc_nmpc/mav_control_interface/src/: mav_control_interface_impl.cpp  state_machine.cpp  state_machine.h
mbzirc_nmpc/mav_nonlinear_mpc/: CMakeLists.txt
mbzirc_nmpc/mav_nonlinear_mpc/include/mav_nonlinear_mpc/: nonlinear_mpc.h
mbzirc_nmpc/mav_nonlinear_mpc/resources/: nonlinear_mpc_firefly.yaml
mbzirc_nmpc/mav_nonlinear_mpc/solver/: nmpc_solver_setup
mbzirc_nmpc/mav_nonlinear_mpc/solver_made_from_cpp/: CMakeLists.txt  nmpc_solver_setup.cpp
mbzirc_nmpc/mav_nonlinear_mpc/src/: nonlinear_mpc.cc
msg/: triplePIDparam.msg
prova_controllo_vel/: CMakeLists.txt  package.xml
prova_controllo_vel/src/: prova.cpp
src/: basic_PID.cpp
trajectory_fitting/: CMakeLists.txt  package.xml
trajectory_fitting/config/: trajectory.rviz
trajectory_fitting/launch/: visualize_trajectory_fitting.launch  visualize_trajectory_fitting_wo_fake_tgt.launch
trajectory_fitting/msg/: Coefficients.msg  TargetPos.msg
trajectory_fitting/scripts/: tf_broadcaster.py
trajectory_fitting/src/: fake_traj_generator.cpp  marker_publisher.cpp  periodicity_analyzer.cpp  target_position_publisher.py  trajectory_prediction.cpp
